[gd_scene load_steps=12 format=2]

[ext_resource path="res://shaders/stylized_water/stylized_water_material.tres" type="Material" id=1]
[ext_resource path="res://maps/models/beach_island_hub/beach_island_hub.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://default_env.tres" type="Environment" id=4]
[ext_resource path="res://shaders/smoke/smoke.tscn" type="PackedScene" id=5]
[ext_resource path="res://props/spaceship/spaceship.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/user_interface.tscn" type="PackedScene" id=7]
[ext_resource path="res://props/portal/portal.tscn" type="PackedScene" id=8]
[ext_resource path="res://maps/boundary.tscn" type="PackedScene" id=9]
[ext_resource path="res://maps/hub_1.gd" type="Script" id=10]

[sub_resource type="PlaneMesh" id=1]
material = ExtResource( 1 )
size = Vector2( 500, 500 )
subdivide_width = 5
subdivide_depth = 5

[node name="Hub1" type="Spatial"]
script = ExtResource( 10 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 39.4168, -76.0941 )
shadow_enabled = true

[node name="WaterPlane" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.583241, -76.0941 )
mesh = SubResource( 1 )

[node name="BeachIslandHub" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -38.6, 0 )

[node name="Player" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 12 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 4 )

[node name="Spaceship" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0, 1, 8.26409, 4.15341, 11.1241 )
__meta__ = {
"_edit_group_": true
}

[node name="Smoke" parent="Spaceship" instance=ExtResource( 5 )]
transform = Transform( 0.939693, 1.49503e-08, 0.34202, 0.34202, -4.10753e-08, -0.939693, 0, 1, -4.37113e-08, -2.43791, 2.20846, -1.00656 )
skeleton = NodePath("")

[node name="UserInterface" parent="." instance=ExtResource( 7 )]

[node name="PortalTestMap" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.85, 2.48, -6.46 )
label = "Test Map"
map_name = "test_map"

[node name="PortalMountainMap" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.73, 3.04, -6.46 )
label = "Mountain Map"
map_name = "mountain_map"
godot_heads_required = 2

[node name="Boundary" parent="." instance=ExtResource( 9 )]
transform = Transform( -9.5744, 0, 0, 0, -0.2, 0, 0, 0, -9.5744, 0, -8.2956, 0 )

[node name="RetryCamera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10.32, 48.54 )
far = 200.0

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
